example/aws/thanos-compact.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-compact
spec:
  template:
    metadata:
      annotations:
        uw.systems/kyverno-inject-sidecar-request: vault-sidecar-aws
