example/aws/thanos-receive.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-receive
spec:
  template:
    metadata:
      annotations:
        injector.tumblr.com/request: vault-sidecar-aws
