example/aws/thanos-rule.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-rule
spec:
  template:
    spec:
      containers:
      - name: thanos-rule
