example/aws/thanos-store.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-store
spec:
  template:
    metadata:
      annotations:
        injector.tumblr.com/request: vault-sidecar-aws
